# ContextShapley

./: .env.template  .gitignore  README.md  pyproject.toml
benchmarks/: __init__.py  gsm8k.py  hotpotqa.py  ifeval.py
contextshapley/: __init__.py  assembler.py  evaluators.py  profiler.py  shapley.py
contextshapley/models/: __init__.py  openai_wrapper.py
experiments/: analyze_crossmodel.py  analyze_full.py  analyze_results.py  run_full.py  run_pilot.py
results/: run_manifest.json
results/raw/gsm8k/: gsm8k_checkpoint.json  gsm8k_results.json
results/raw/gsm8k/logs/: gsm8k_0000__D,E,H,S,T.json  gsm8k_0000__D,E,H,S.json  gsm8k_0000__D,E,H,T.json  gsm8k_0000__D,E,H.json  gsm8k_0000__D,E,S,T.json  gsm8k_0000__D,E,S.json  gsm8k_0000__D,E,T.json  gsm8k_0000__D,E.json  gsm8k_0000__D,H,S,T.json  gsm8k_0000__D,H,S.json  gsm8k_0000__D,H,T.json  gsm8k_0000__D,H.json  gsm8k_0000__D,S,T.json  gsm8k_0000__D,S.json  gsm8k_0000__D,T.json  gsm8k_0000__D.json  gsm8k_0000__E,H,S,T.json  gsm8k_0000__E,H,S.json  gsm8k_0000__E,H,T.json  gsm8k_0000__E,H.json  (+300 more)
results/raw/gsm8k_qwen3_8b/: gsm8k_checkpoint.json  gsm8k_qwen3_8b_results.json
results/raw/hotpotqa/: hotpotqa_checkpoint.json  hotpotqa_results.json
results/raw/hotpotqa_qwen3_8b/: hotpotqa_checkpoint.json  hotpotqa_qwen3_8b_results.json
results/raw/ifeval/: ifeval_checkpoint.json  ifeval_results.json
results/raw/ifeval_qwen3_8b/: ifeval_checkpoint.json  ifeval_qwen3_8b_results.json
results/raw/pilot/: pilot_results.json
tests/: test_assembler.py  test_benchmarks.py  test_evaluators.py  test_shapley.py
(+1837 files in other folders)
